--- a/.github/draft_3/run_upload_packages.yaml
+++ b/.github/draft_3/run_upload_packages.yaml
@@ -3,17 +3,12 @@ name: Upload packages to NPM and S3
 run-name: Upload packages to NPM and S3
 
 on:
-  push:
+  pull_request:
     branches:
       - devops-pr
 
 jobs:
-  running-tests:
-    uses: ./.github/workflows/tests.yaml
-    with:
-      yarn-run-to-execute: 'eslint flow'
   upload-packages-to-npm:
-    needs: running-tests
     uses: ./.github/workflows/upload_to_npm.yaml
     secrets:
       NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
