--- a/.github/draft_3/upload_to_npm.yaml
+++ b/.github/draft_3/upload_to_npm.yaml
@@ -15,16 +15,6 @@ on:
         description: "prod or not boolean - example: 'false/true'"
         required: true
         type: string
-    outputs:
-      name:
-        description: "name"
-        value: ${{ jobs.upload-to-npm.outputs.name }}
-      version:
-        description: "version"
-        value: ${{ jobs.upload-to-npm.outputs.version }}
-      full-npm-name:
-        description: "full-npm-name"
-        value: ${{ jobs.upload-to-npm.outputs.full-npm-name }}
 
 jobs:
   upload-to-npm:
@@ -33,10 +23,6 @@ jobs:
         os: [ubuntu-latest]
         node-version: [ 17.x ]
     runs-on: ${{ matrix.os }}
-    outputs:
-      name: ${{ steps.name.outputs.name }}
-      version: ${{ steps.version.outputs.version }}
-      full-npm-name: ${{ steps.full_npm_name.outputs.full_npm_name }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -89,34 +75,5 @@ jobs:
           NODE_OPTIONS: "--openssl-legacy-provider"
 
       - name: Yarn publish
-        run: |
-          if [ "${{ inputs.prod }}" = "true" ]; then
-            yarn publish
-          else
-            yarn publish --tag canary
-          fi
+        run: echo "good"
 
-      - name: Output name
-        id: name
-        run: |
-          packageName=$(npx -c 'echo "$npm_package_name"')
-          shortName=$(echo "${packageName}"| sed -e 's/@playkit-js\///g' -e 's/playkit-js-//g')
-          name="playkit-${shortName}"
-          echo $name
-          echo "name=${name}" >> $GITHUB_OUTPUT
-
-      - name: Output version
-        id: version
-        run: |
-          version=$(npx -c 'echo "$npm_package_version"')
-          echo $version
-          echo "version=${version}" >> $GITHUB_OUTPUT
-
-      - name: Output full package name and version
-        id: full_npm_name
-        run: |
-          packageName=$(npx -c 'echo "$npm_package_name"')
-          currentVersion=$(npx -c 'echo "$npm_package_version"')
-          full_npm_name="${packageName}@${currentVersion}"
-          echo $full_npm_name
-          echo "full_npm_name=${full_npm_name}" >> $GITHUB_OUTPUT
