--- a/.github/workflows/run_upload_packages.yaml
+++ b/.github/workflows/run_upload_packages.yaml
@@ -26,8 +26,9 @@ jobs:
       CENTRAL_ACCOUNT_ID: ${{ secrets.CENTRAL_ACCOUNT_ID }}
       S3_BUCKET_APPS: ${{ secrets.S3_BUCKET_APPS }}
     with:
-      aws-secret-central: '"dor-test-github-actions"'
+      aws-secret-central: '"dor-test-github-actions-Q3jQq1"'
       kind: "plugin"
-      full-npm-name: ${{ needs.upload-packages-to-npm.outputs.full_npm_name }}
-      version: ${{ needs.upload-packages-to-npm.outputs.version }}
+      prod: "false"
       name: ${{ needs.upload-packages-to-npm.outputs.name }}
+      version: ${{ needs.upload-packages-to-npm.outputs.version }}
+      full-npm-name: ${{ needs.upload-packages-to-npm.outputs.full-npm-name }}
