test workflow needs

--- a/.github/workflows/upload_to_s3.yaml
+++ b/.github/workflows/upload_to_s3.yaml
@@ -76,7 +76,7 @@ jobs:
 
       - name: Download plugin package
         run: |
-          download_url=$(yarn info --silent ${{ needs.get-package-details.outputs.full-npm-name }} dist.tarball)
+          download_url=$(yarn info --silent ${{ inputs.full-npm-name }} dist.tarball)
           curl -L ${download_url} -o package.tgz
           tar -xzf package.tgz
 
