test schema update

--- a/.github/drafts/run_upload_packages.yaml
+++ b/.github/drafts/run_upload_packages.yaml
@@ -3,17 +3,12 @@ name: Upload packages to NPM and S3
 run-name: Upload packages to NPM and S3
 
 on:
-  push:
+  pull_request:
     branches:
       - devops-pr
 
 jobs:
-  running-tests:
-    uses: ./.github/workflows/tests.yaml
-    with:
-      yarn-run-to-execute: 'eslint flow'
   upload-packages-to-npm:
-    needs: running-tests
     uses: ./.github/workflows/upload_to_npm.yaml
     secrets:
       NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
@@ -26,6 +21,8 @@ jobs:
       CENTRAL_ACCOUNT_ID: ${{ secrets.CENTRAL_ACCOUNT_ID }}
       S3_BUCKET_APPS: ${{ secrets.S3_BUCKET_APPS }}
     with:
-      aws-secret-central: '"dor-test-github-actions"'
+      aws-secret-central: '"dor-test-github-actions-Q3jQq1"'
       kind: "plugin"
-      prod: "false"
+      name: ${{ needs.upload-packages-to-npm.outputs.name }}
+      version: ${{ needs.upload-packages-to-npm.outputs.version }}
+      full-npm-name: ${{ needs.upload-packages-to-npm.outputs.full-npm-name }}
