--- a/.github/drafts/upload_to_s3.yaml
+++ b/.github/drafts/upload_to_s3.yaml
@@ -17,8 +17,16 @@ on:
         description: "choose player or plugin - example: 'plugin'"
         required: true
         type: string
-      prod:
-        description: "prod or not boolean - example: 'false/true'"
+      name:
+        description: "name"
+        required: true
+        type: string
+      version:
+        description: "version"
+        required: true
+        type: string
+      full-npm-name:
+        description: "full-npm-name"
         required: true
         type: string
 
@@ -26,71 +34,6 @@ env:
   PLAYERS: "ovp tv"
 
 jobs:
-  get-package-details:
-    strategy:
-      matrix:
-        os: [ ubuntu-latest ]
-        node-version: [ 17.x ]
-    runs-on: ${{ matrix.os }}
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Node.js version ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-
-      - name: Setup Git
-        run: |
-          git config --global user.email "ovp.cp@kaltura.com"
-          git config --global user.name "ovp-github-actions"
-
-      - name: Yarn run release
-        run: |
-          if [ ${{ inputs.prod }} = "true" ]; then
-            yarn run release
-          else
-            yarn run release --prerelease canary --skip.commit=true --skip.tag=true
-          fi
-
-      - name: Update version in package.json file
-        run: |
-          sha=$(echo "${GITHUB_SHA::7}")
-          currentVersion=$(npx -c 'echo "$npm_package_version"')
-          commitNumberAfterTag=$(git rev-list  `git rev-list --tags --no-walk --max-count=1`..HEAD --count)
-          newVersion=$(echo ${currentVersion} | sed -e "s/canary\.[[:digit:]]/canary.${commitNumberAfterTag}-${sha}/g")
-          echo "New version ${newVersion}"
-          sed -iE "s/${currentVersion}/${newVersion}/g" package.json
-          sed -iE "s/${currentVersion}/${newVersion}/g" CHANGELOG.md
-          rm package.jsonE
-          rm CHANGELOG.mdE
-
-      - name: Output name
-        id: name
-        run: |
-          packageName=$(npx -c 'echo "$npm_package_name"')
-          shortName=$(echo "${packageName}"| sed -e 's/@playkit-js\///g' -e 's/playkit-js-//g')
-          name="playkit-${shortName}"
-          echo $name
-          echo "name=${name}" >> $GITHUB_OUTPUT
-
-      - name: Output version
-        id: version
-        run: |
-          version=$(npx -c 'echo "$npm_package_version"')
-          echo $version
-          echo "version=${version}" >> $GITHUB_OUTPUT
-
-      - name: Output full package name and version
-        id: full_npm_name
-        run: |
-          packageName=$(npx -c 'echo "$npm_package_name"')
-          currentVersion=$(npx -c 'echo "$npm_package_version"')
-          full_npm_name="${packageName}@${currentVersion}"
-          echo $full_npm_name
-          echo "full_npm_name=${full_npm_name}" >> $GITHUB_OUTPUT
-
   get-accounts:
     strategy:
       matrix:
@@ -112,13 +55,13 @@ jobs:
       - name: Get environments list
         id: accounts
         run: |
-          aws_envs=$(aws secretsmanager get-secret-value --secret-id  arn:aws:secretsmanager:us-east-1:${{ secrets.CENTRAL_ACCOUNT_ID }}:secret:dor-test-github-actions-Q3jQq1 --query SecretString --output text | jq -c)
+          aws_envs=$(aws secretsmanager get-secret-value --secret-id  arn:aws:secretsmanager:us-east-1:${{ secrets.CENTRAL_ACCOUNT_ID }}:secret:${{ inputs.aws-secret-central }} --query SecretString --output text | jq -c)
           accounts=$(echo $aws_envs | jq -c '.[]' | while read i; do jq -n --arg env "$(jq -r '.env' <<< "$i")" '{"env": $env, "os": "ubuntu-latest", "node-version": "17.x"}' ; done | jq -s -c)
           echo $accounts
           echo "accounts={\"include\":$accounts}" >> $GITHUB_OUTPUT
 
   upload-to-s3:
-    needs: [get-package-details, get-accounts]
+    needs: get-accounts
     strategy:
       matrix: ${{fromJSON(needs.get-accounts.outputs.accounts)}}
     runs-on: ${{ matrix.os }}
@@ -132,9 +75,8 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - name: Download plugin package
-        if: ${{ inputs.kind == 'plugin' }}
         run: |
-          download_url=$(yarn info --silent ${{ needs.get-package-details.outputs.full-npm-name }} dist.tarball)
+          download_url=$(yarn info --silent ${{ inputs.full-npm-name }} dist.tarball)
           curl -L ${download_url} -o package.tgz
           tar -xzf package.tgz
 
@@ -177,8 +119,8 @@ jobs:
                       --query "Credentials.[AccessKeyId,SecretAccessKey,SessionToken]" \
                       --output text))
 
-          s3Path="s3://${{ matrix.env }}-${{ secrets.S3_BUCKET_APPS }}/bundler/playkit/modules/${{ needs.get-package-details.outputs.name }}/${{ needs.get-package-details.outputs.version }}"
-          aws s3 cp package/dist/ ${s3Path}/ --recursive --exclude "*" --include "${{ needs.get-package-details.outputs.name }}.js*"
+          s3Path="s3://${{ matrix.env }}-${{ secrets.S3_BUCKET_APPS }}/bundler/playkit/modules/${{ inputs.name }}/${{ inputs.version }}"
+          aws s3 cp package/dist/ ${s3Path}/ --recursive --exclude "*" --include "${{ inputs.name }}.js*"
           aws s3 ls ${s3Path}/
           if [ -d 'translations' ]; then
             aws s3 cp translations/ ${s3Path}/translations/ --recursive --include "*"
@@ -198,7 +140,7 @@ jobs:
                       --output text))
 
           for player in ${{ env.PLAYERS }}; do
-            s3Path="s3://${{ matrix.env }}-${{ secrets.S3_BUCKET_APPS }}/bundler/playkit/modules/kaltura-${player}-player/${{ needs.get-package-details.outputs.version }}"
+            s3Path="s3://${{ matrix.env }}-${{ secrets.S3_BUCKET_APPS }}/bundler/playkit/modules/kaltura-${player}-player/${{ inputs.version }}"
             aws s3 cp package/dist/ ${s3Path}/ --recursive --exclude "*" --include "kaltura-${player}-player.js*"
             aws s3 ls ${s3Path}/
             if [ -d 'translations' ]; then
