--- a/.github/workflows/upload_to_npm.yaml
+++ b/.github/workflows/upload_to_npm.yaml
@@ -71,29 +71,6 @@ jobs:
             yarn run release --prerelease canary --skip.commit=true --skip.tag=true
           fi
 
-      - name: Setup Git
-        run: |
-          git config --global user.email "ovp.cp@kaltura.com"
-          git config --global user.name "ovp-github-actions"
-
-      - name: Yarn upgrade ${{ inputs.yarn-upgrade-list }}
-        if: ${{ inputs.yarn-upgrade-list }}
-        run: |
-          for command in ${{ inputs.yarn-upgrade-list }}; do
-            yarn upgrade $command
-          done
-
-      - name: Yarn install
-        run: yarn install
-
-      - name: Yarn run release
-        run: |
-          if [ "${{ inputs.prod }}" = "true" ]; then
-            yarn run release
-          else
-            yarn run release --prerelease canary --skip.commit=true --skip.tag=true
-          fi
-
       - name: Update version in package.json file
         run: |
           sha=$(echo "${GITHUB_SHA::7}")
@@ -116,7 +93,7 @@ jobs:
           if [ "${{ inputs.prod }}" = "true" ]; then
             yarn publish
           else
-            yarn publish --tag canary
+            yarn publish --tag dor-test
           fi
         env:
           NPM_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
