--- a/.github/workflows/upload_to_s3.yaml
+++ b/.github/workflows/upload_to_s3.yaml
@@ -1,5 +1,5 @@
-name: Upload to s3 QA and Dev
-run-name: Upload to s3 QA and Dev
+name: Upload to s3
+run-name: Upload to s3
 
 on:
   workflow_call:
@@ -13,7 +13,7 @@ on:
         description: "secret in central that include all the account ids"
         required: true
         type: string
-      kind:
+      type:
         description: "choose player or plugin - example: 'plugin'"
         required: true
         type: string
@@ -35,10 +35,7 @@ env:
 
 jobs:
   get-accounts:
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-    runs-on: ${{ matrix.os }}
+    runs-on: [ubuntu-latest]
     permissions:
       id-token: write
       contents: read
@@ -84,7 +81,7 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v1
         with:
           role-to-assume: arn:aws:iam::${{ secrets.CENTRAL_ACCOUNT_ID }}:role/dor-test-oidc-github-actions
-          role-session-name: githubAction
+          role-session-name: githubAction-${{ github.run_id }}
           aws-region: "us-east-1"
 
       - name: Get specific account details
@@ -108,13 +105,13 @@ jobs:
           echo "region=$region" >> $GITHUB_OUTPUT
 
       - name: Upload plugin to s3 apps
-        if: ${{ inputs.kind == 'plugin' }}
+        if: ${{ inputs.type == 'plugin' }}
         run: |
           # Assume role
           export $(printf "AWS_ACCESS_KEY_ID=%s AWS_SECRET_ACCESS_KEY=%s AWS_SESSION_TOKEN=%s" \
                       $(aws sts assume-role \
                       --role-arn arn:aws:iam::${{ steps.account_id.outputs.account_id }}:role/${{ matrix.env }}-kalt-ovp-apps-role \
-                      --role-session-name ${{ matrix.env }} \
+                      --role-session-name "${{ matrix.env }}-${{ github.run_id }}" \
                       --region ${{ steps.region.outputs.region }} \
                       --query "Credentials.[AccessKeyId,SecretAccessKey,SessionToken]" \
                       --output text))
@@ -128,13 +125,13 @@ jobs:
           fi
 
       - name: Upload player to s3 apps by assuming role
-        if: ${{ inputs.kind == 'player' }}
+        if: ${{ inputs.type == 'player' }}
         run: |
           # Assume role
           export $(printf "AWS_ACCESS_KEY_ID=%s AWS_SECRET_ACCESS_KEY=%s AWS_SESSION_TOKEN=%s" \
                       $(aws sts assume-role \
                       --role-arn arn:aws:iam::${{ steps.account_id.outputs.account_id }}:role/${{ matrix.env }}-kalt-ovp-apps-role \
-                      --role-session-name ${{ matrix.env }} \
+                      --role-session-name "${{ matrix.env }}-${{ github.run_id }}" \
                       --region ${{ steps.region.outputs.region }} \
                       --query "Credentials.[AccessKeyId,SecretAccessKey,SessionToken]" \
                       --output text))
