--- a/.github/workflows/update_schema.yaml
+++ b/.github/workflows/update_schema.yaml
@@ -66,8 +66,8 @@ jobs:
           tmp=$(mktemp)
           aws s3 cp ${s3Path}/${jsonName} .
 
-          # echo ${jsonName} before the changes
-          echo ${jsonName}
+          # cat ${jsonName} before the changes
+          cat ${jsonName}
 
           if [ "${{ inputs.type }}" = "plugin" ]; then
             jq '."'"${{ inputs.name }}"'" = "'"${{ inputs.version }}"'"' ${jsonName} > "$tmp" && mv "$tmp" ${jsonName}
@@ -80,7 +80,7 @@ jobs:
             exit 1
           fi
 
-          # echo ${jsonName} after the changes
-          echo ${jsonName}
+          # cat ${jsonName} after the changes
+          cat ${jsonName}
 
           aws s3 cp ${jsonName} ${s3Path}/
