fix(FEC-12963): upgrade youboralib to 6.8.42

--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-flow": "^7.10.4",
     "@babel/register": "^7.10.5",
+    "@playkit-js/playkit-js": "canary",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-istanbul": "^6.0.0",
@@ -73,7 +74,6 @@
     "husky": "^4.2.5",
     "istanbul": "^0.4.5",
     "kaltura-player-js": "kaltura/kaltura-player-js#master",
-    "@playkit-js/playkit-js": "canary",
     "karma": "^5.1.0",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^3.1.0",
@@ -97,11 +97,11 @@
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
-    "youboralib": "6.8.22"
+    "youboralib": "6.8.42"
   },
   "peerDependencies": {
-    "kaltura-player-js": "kaltura/kaltura-player-js#master",
-    "@playkit-js/playkit-js": "canary"
+    "@playkit-js/playkit-js": "canary",
+    "kaltura-player-js": "kaltura/kaltura-player-js#master"
   },
   "publishConfig": {
     "access": "public"
