--- a/.github/workflows/promote_schema.yaml
+++ b/.github/workflows/promote_schema.yaml
@@ -45,8 +45,8 @@ jobs:
                       --query "Credentials.[AccessKeyId,SecretAccessKey,SessionToken]" \
                       --output text))
 
-          from=$(echo ${{ inputs.promotion-type }} | awk -F ' --> ' '{print $1}')
-          to=$(echo ${{ inputs.promotion-type }} | awk -F ' --> ' '{print $2}')
+          from=$(echo "${{ inputs.promotion-type }}" | awk -F ' --> ' '{print $1}')
+          to=$(echo "${{ inputs.promotion-type }}" | awk -F ' --> ' '{print $2}')
 
           jsonNameFrom="player-${from}-${{ inputs.schema-type }}.json"
           jsonNameTo="player-${to}-${{ inputs.schema-type }}.json"
@@ -61,3 +61,4 @@ jobs:
           echo "copy to file ${jsonNameTo}:"
           cat ${jsonNameTo}
 
+          aws s3 cp ${jsonNameTo} ${s3Path}/
