--- a/.github/workflows/update_schema.yaml
+++ b/.github/workflows/update_schema.yaml
@@ -45,9 +45,9 @@ jobs:
       - name: Configure aws credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          role-to-assume: arn:aws:iam::${{ secrets.CENTRAL_ACCOUNT_ID }}:role/dor-test-oidc-github-actions
+          role-to-assume: arn:aws:iam::${{ secrets.CENTRAL_ACCOUNT_ID }}:role/central-oidc-github-actions
           role-session-name: githubAction
-          aws-region: "us-east-1"
+          aws-region: "eu-central-1"
 
       - name: Update schema s3 deployment
         run: |
