--- a/.github/workflows/build_uiconf.yaml
+++ b/.github/workflows/build_uiconf.yaml
@@ -11,7 +11,7 @@ on:
       S3_BUCKET_DEPLOYMENT:
         required: true
     inputs:
-      build-for:
+      stage:
         description: "build for specific type - example: 'canary/beta/latest'"
         required: true
         type: string
@@ -19,6 +19,10 @@ on:
         description: "schema-type - example: 'playerV3Versions/playerV3OvpVersions'"
         required: true
         type: string
+    outputs:
+      version:
+        description: "version - example: '1.00.000'"
+        value: ${{ jobs.build-uiconf.outputs.version }}
 
 jobs:
   build-uiconf:
@@ -26,6 +30,8 @@ jobs:
     permissions:
       id-token: write
       contents: read
+    outputs:
+      stage: ${{ steps.version.outputs.version }}
     steps:
       - name: Configure aws credentials
         uses: aws-actions/configure-aws-credentials@v1
@@ -46,7 +52,7 @@ jobs:
                       --query "Credentials.[AccessKeyId,SecretAccessKey,SessionToken]" \
                       --output text))
 
-          if [ "${{ inputs.build-for }}" = "canary" ]; then
+          if [ "${{ inputs.stage }}" = "canary" ]; then
             oldVersion=$(aws ssm get-parameters --names /player/versions/uiconf/canary --region us-east-1 | jq -r .Parameters[].Value)
             if [ "${oldVersion}" = "NULL" ]; then
               oldVersion=$(aws ssm get-parameters --names /player/versions/uiconf/latest --region us-east-1 | jq -r .Parameters[].Value)
@@ -57,14 +63,17 @@ jobs:
           else
             oldVersion=$(aws ssm get-parameters --names /player/versions/uiconf/latest --region us-east-1 | jq -r .Parameters[].Value)
             newVersion=$(echo "${oldVersion}" | awk -F. -v OFS=. 'NF==1{print ++$NF}; NF>1{if(length($NF+1)>length($NF))$(NF-1)++; $NF=sprintf("%0*d", length($NF), ($NF+1)%(10^length($NF))); print}')
+            if [ "${{ inputs.stage }}" = "latest" ]; then
+              aws ssm put-parameter --name /player/versions/uiconf/canary-dor-test --value "NULL" --overwrite --region us-east-1
+            fi
           fi
 
-          aws ssm put-parameter --name /player/versions/uiconf/${{ inputs.build-for }}-dor-test --value ${newVersion} --overwrite --region us-east-1
+          aws ssm put-parameter --name /player/versions/uiconf/${{ inputs.stage }}-dor-test --value ${newVersion} --overwrite --region us-east-1
 
           echo "new version is: ${newVersion}"
           echo "version=${newVersion}" >> $GITHUB_OUTPUT
 
-      - name: Build uiconf for ${{ inputs.build-for }} on schema-type ${{ inputs.schema-type }}
+      - name: Build uiconf for ${{ inputs.stage }} on schema-type ${{ inputs.schema-type }}
         run: |
           # Assume role
           export $(printf "AWS_ACCESS_KEY_ID=%s AWS_SECRET_ACCESS_KEY=%s AWS_SESSION_TOKEN=%s" \
@@ -75,20 +84,20 @@ jobs:
                       --query "Credentials.[AccessKeyId,SecretAccessKey,SessionToken]" \
                       --output text))
 
-          jsonName="playkit_dor_test_${{ inputs.schema-type }}_${{ steps.version.outputs.version }}_${{ inputs.build-for }}.json"
+          jsonName="playkit_dor_test_${{ inputs.schema-type }}_${{ steps.version.outputs.version }}_${{ inputs.stage }}.json"
 
           s3Path="s3://nvp1-${{ secrets.S3_BUCKET_DEPLOYMENT }}/player/uiconf"
 
           tmp=$(mktemp)
           echo "[general]" > "$tmp"
           echo "component.name = ${{ inputs.schema-type }}" >> "$tmp"
-          echo "component.version = ${{ inputs.build-for }}" >> "$tmp"
+          echo "component.version = ${{ inputs.stage }}" >> "$tmp"
           echo "\n" >> "$tmp"
           echo "[defaultKdp]" >> "$tmp"
           echo "objectType = 6" >> "$tmp"
           echo "widgets.versions.conf_vars = '{"version":"${{ steps.version.outputs.version }}"}'" >> "$tmp"
           echo "widgets.versions.name = playkitVersions" >> "$tmp"
-          echo "widgets.versions.usage = list,${{ steps.version.outputs.version }},${{ inputs.schema-type }},${{ inputs.build-for }}" >> "$tmp"
+          echo "widgets.versions.usage = list,${{ steps.version.outputs.version }},${{ inputs.schema-type }},${{ inputs.stage }}" >> "$tmp"
           echo "widgets.versions.config = '${jsonConf}'" >> "$tmp"
 
           mv "$tmp" ${jsonName}
