testing resuable from pub repo

--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -9,8 +9,8 @@ on:
 
 jobs:
   running-tests:
-    uses: ./.github/workflows/tests.yaml
+    uses: kaltura/ovp-pipelines/.github/workflows/tests.yaml
     with:
-      yarn-run-to-execute: 'eslint flow test'
+      yarn-run-to-execute: 'eslint flow'
 
 
