canary full flow

--- a/.github/workflows/run_canary.yaml
+++ b/.github/workflows/run_canary.yaml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   canary-full-flow:
-    uses: kaltura/ovp-pipelines-pub/.github/workflows/player_canary.yaml@v1.0.0
+    uses: kaltura/ovp-pipelines-pub/.github/workflows/player_canary.yaml@master
     secrets:
       CENTRAL_ACCOUNT_ID: ${{ secrets.CENTRAL_ACCOUNT_ID }}
       SERVICES_ACCOUNT_ID: ${{ secrets.SERVICES_ACCOUNT_ID }}
