--- a/.github/workflows/test_webhook.yaml
+++ b/.github/workflows/test_webhook.yaml
@@ -16,3 +16,9 @@ jobs:
         if: always()
         with:
           webhook_url: ${{ secrets.MSTEAMS_WEBHOOK }}
+          raw: >-
+            {
+              "@type": "MessageCard",
+              "@context": "http://schema.org/extensions",
+              "title": "No ${variables} avaliable in here"
+            }
