--- a/.github/workflows/test_webhook.yaml
+++ b/.github/workflows/test_webhook.yaml
@@ -20,5 +20,22 @@ jobs:
             {
               "@type": "MessageCard",
               "@context": "http://schema.org/extensions",
-              "title": "No ${variables} avaliable in here"
+              "themeColor": "0076D7",
+              "summary": "Larry Bryant created a new task",
+              "sections": [ {
+                "activityTitle": "Larry Bryant created a new task",
+                "activitySubtitle": "On Project Tango",
+                "activityImage": "https://teamsnodesample.azurewebsites.net/static/img/image5.png",
+                "facts": [ {
+                  "name": "Assigned to",
+                  "value": "Unassigned"
+                }, {
+                  "name": "Due date",
+                  "value": "Mon May 01 2017 17:07:18 GMT-0700 (Pacific Daylight Time)"
+                }, {
+                  "name": "Status",
+                  "value": "Not started"
+                } ],
+                "markdown": true
+              } ]
             }
