--- a/.github/workflows/test_webhook.yaml
+++ b/.github/workflows/test_webhook.yaml
@@ -11,30 +11,5 @@ jobs:
     runs-on: [ubuntu-latest]
     steps:
       - uses: actions/checkout@v3
-      - name: Microsoft Teams Notification
-        uses: skitionek/notify-microsoft-teams@v1.0.4
-        if: always()
-        with:
-          webhook_url: ${{ secrets.MSTEAMS_WEBHOOK }}
-          raw: >-
-            {
-              "@type": "message",
-              "@context": "http://schema.org/extensions",
-              "summary": "Larry Bryant created a new task",
-              "sections": [ {
-                "activityTitle": "created a new pull_request in ${{ github.event.repository.name }}@ - Build Errored",
-                "activitySubtitle": "On Project Tango",
-                "activityImage": "https://teamsnodesample.azurewebsites.net/static/img/image5.png",
-                "facts": [ {
-                  "name": "Assigned to",
-                  "value": "${{ github.event.payload.CreateEvent }}"
-                }, {
-                  "name": "Due date",
-                  "value": "Mon May 01 2017 17:07:18 GMT-0700 (Pacific Daylight Time)"
-                }, {
-                  "name": "Status",
-                  "value": "Not started"
-                } ],
-                "markdown": true
-              } ]
-            }
+      - name: Dump GitHub context
+        run: echo '${{ toJSON(github) }}'
