--- a/.github/workflows/pr_notification.yaml
+++ b/.github/workflows/pr_notification.yaml
@@ -1,6 +1,6 @@
-## CI - Player And Plugin Tests
-name: Player And Plugin Tests
-run-name: Player And Plugin Tests
+## Notification
+name: Notification pull_request
+run-name: Notification pull_request
 
 on:
   pull_request:
