--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   running-tests:
-    uses: kaltura/ovp-pipelines-pub/.github/workflows/player_tests.yaml@master
+    uses: kaltura/ovp-pipelines-pub/.github/workflows/player_tests.yaml@fix-uiconf-deploy
     with:
       yarn-run-to-execute: 'eslint flow test'
 
