--- a/.flowconfig
+++ b/.flowconfig
@@ -1,8 +1,9 @@
 [ignore]
-.*/node_modules
+.*/node_modules/*
 [include]
 [libs]
+./src/
 node_modules/@playkit-js/playkit-js/flow-typed/
-node_modules/kaltura-player-js/flow-typed/
+node_modules/@playkit-js/kaltura-player-js/flow-typed/
 [options]
 esproposal.optional_chaining=enable
