--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@babel/preset-flow": "^7.10.4",
     "@babel/register": "^7.10.5",
     "@playkit-js/playkit-js": "canary",
+    "@playkit-js/kaltura-player-js": "canary",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-istanbul": "^6.0.0",
@@ -73,7 +74,6 @@
     "flow-bin": "^0.129.0",
     "husky": "^4.2.5",
     "istanbul": "^0.4.5",
-    "kaltura-player-js": "kaltura/kaltura-player-js#master",
     "karma": "^5.1.0",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^3.1.0",
@@ -101,7 +101,7 @@
   },
   "peerDependencies": {
     "@playkit-js/playkit-js": "canary",
-    "kaltura-player-js": "kaltura/kaltura-player-js#master"
+    "@playkit-js/kaltura-player-js": "canary"
   },
   "publishConfig": {
     "access": "public"
