--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "license": "AGPL-3.0",
   "main": "dist/playkit-youbora.js",
   "scripts": {
+    "preinstall": "npx --yes --prefer-online --registry=https://npm.pkg.github.com --package @kaltura/kaltura-tools@latest kaltura-tools check --root=.",
     "prebuild": "npm run clean",
     "build": "webpack --mode production",
     "clean": "rm -rf ./dist",
